# Elevator

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  run_all_tests.py  setup.py  simple_example.py  start.sh  test_example.py  电梯调度编程 结对作业 说明.md  结对作业使用说明  10.01更新.md
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  dependabot.yml  docs.yml  publish.yml
assignment/: README.md  __init__.py  baseline_controller.py  main.py  run_server.py  web_dashboard.py
assignment/web_static/: index.html  main.js  style.css
docs/: client.rst  communication.rst  events.rst  index.rst  models.rst
elevator_saga/: __init__.py
elevator_saga/client/: api_client.py  base_controller.py  proxy_models.py
elevator_saga/client_examples/: bus_example.py
elevator_saga/core/: models.py
elevator_saga/scripts/client_examples/: simple_example.py
elevator_saga/server/: simulator.py
elevator_saga/traffic/: down_peak.json  fire_evacuation.json  generators.py  high_density.json  inter_floor.json  lunch_rush.json  medical.json  meeting_event.json  mixed_scenario.json  progressive_test.json  random.json  up_peak.json
